--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -34,7 +34,7 @@
                             <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
                           <li class="active"><a href="<?php echo $this->url('home') ?>">Settings</a></li>
                           <li class="active"><a href="<?php echo $this->url('home') ?>">Albums</a></li>
-                          <li class="active"><a href="<?php echo $this->url('home') ?>">Add</a></li>
+                          <li class="active"><a href="<?php echo $this->url('home') ?>">Add Album</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
