--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -28,13 +28,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Skeleton Application') ?></a>
+                    <a class="brand" href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Album Aplication - Mevan') ?></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                          <li class="active"><a href="<?php echo $this->url('home') ?>">Settings</a></li>
-                          <li class="active"><a href="<?php echo $this->url('home') ?>">Albums</a></li>
-                          <li class="active"><a href="<?php echo $this->url('home') ?>">Add Album</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
